2008-05-28
  - Added the RGB<->RYB hue conversion.
  - Added an angle parameter to the tetrad scheme to control the shape of
    the rectangle.

2008-05-27
  - Released 0.1a2

2008-05-24

  - Fixed the HSL->RGB conversion
    (the modulo in the hue conversion was 60 instead of 6.0!)
    Updated the unit tests (which were wrong!)

2008-05-24

  Released 0.1a1
  - Convert the documentation to Sphinx
  - Completed the unit tests
  - Fixed some stupid typos

2008-05-22

  - Refactored pretty much everything to more standard "Python coding style".
  - Replaced the global variables by Color properties.
  - Moved the module functions to static methods of Color.
  - Completed the CIE white point dictionary to include all the standard
    illuminants.
  - Added doctest for all the functions.
  - Fixed the conversions factors to get better results (more exact and
    more symmetric).
  - Changed the range of the L component from [0~1] to [0~100] (as it should
    have been).
  - Added packaging data and setup.
  - Changed the structure of the unit tests.

2008-05-08

  Released 0.1a0
  - Initial checkin of grapefruit